# Automobile-Insurance-System

./: .gitignore  LICENSE  README.md
SDA_AutoInsurance_CLI/: AutoInsuranceSystem.cpp  CLIManager.cpp  CLIManager.h  CMakeLists.txt  Claim.h  ClaimController.h  InspectionReport.h  Manager.h  Salesman.h  Surveyor.h  User.cpp  UserController.cpp  UserController.h  Vehicle.h  Workshop.cpp  Workshop.h  workshops.txt
SDA_AutoInsurance_GUI/: AutoInsuranceSystem.cpp  CMakeLists.txt  ClaimController.cpp  Customer.h  FileHandler.cpp  FileHandler.h  InsurancePolicy.h  UIManager.cpp  UIManager.h  User.h  imgui.ini
SDA_AutoInsurance_GUI/MD Files/: Audit_Part1_Compliance_and_Strengths.md  Audit_Part2_Discrepancies_and_ActionPlan.md
